Fix numerous code issues and deprecations